--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,15 @@
+2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-translator.adb:
+	(Compress_Decompress): Do not use an access parameter. This is
+	 just not needed.
+	(Compress): Idem.
+	(Decompress): Idem.
+
+	* aws-translator.ads:
+	(Compress): Do not use an access parameter. This is just not needed.
+	(Decompress): Idem.
+
 2003-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-resources-streams-memory.ads,
