--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* compress.adb, check_mem.adb: 
+	(Test): Fix test due to change of routine's interface in
+	 AWS.Translator.
+
 2003-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* check_mem.adb:
