--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-09  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.adb:
+	Update to version 6.2.
+	This fixes a bug in the way subdirectories are handled in the loader.
+
 2003-10-07  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
