--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-10  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* main.adb, runme.adb:
+	Changed to use AWS.Server.Log.
+
 2003-10-09  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* demos.gpr:
