--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-10  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* src_include.gpr:
+	with ssl project file.
+
 2003-10-09  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* templates_parser.adb:
