--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-14  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-services-directory.adb:
+	Minor reformatting.
+
 2003-10-12  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-communication-server.adb:
