--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-18  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-containers-tables.adb:
+	(Get_Values): Do not use 1 but Name_Indexes.First. Minor ident fix.
+
 2003-10-14  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-services-directory.adb:
