--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-21  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-containers-tables.ads:
+	(Get): Remove double 'if' typo.
+
 2003-10-18  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-containers-tables.adb:
