--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-23  Pascal Obry  <pascal.obry@edf.fr>
+
+	* zlib.adb:
+	Add pragma Linker_Options -lz.
+
 2003-10-10  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* src_include.gpr:
