--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,6 +1,11 @@
 2003-10-23  Pascal Obry  <pascal.obry@edf.fr>
 
 	* zlib.adb:
+	Revert back previous change.
+	
+2003-10-23  Pascal Obry  <pascal.obry@edf.fr>
+
+	* zlib.adb:
 	Add pragma Linker_Options -lz.
 
 2003-10-10  Pascal Obry  <p.obry@wanadoo.fr>
