--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-23  Pascal Obry  <pascal.obry@edf.fr>
+
+	* aws-resources-streams-memory-zlib.adb:
+	Add pragma Linker_Options -lz.
+
 2003-10-21  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-containers-tables.ads:
