--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-28  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser.adb:
+	Update to version 6.3.
+	This fixes the way errors from include files are reported.
+
 2003-10-23  Pascal Obry  <pascal.obry@edf.fr>
 
 	* zlib.adb:
