--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-29  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-generator.adb:
+	(Put_Header): Fix indent for routines with paratemeters but no
+	 return value.
+
 2003-10-09  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-client.ads:
