--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,5 +1,10 @@
 2003-10-29  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* soap-utils.ads, soap-generator.adb:
+	Fix typo in comment.
+
+2003-10-29  Pascal Obry  <p.obry@wanadoo.fr>
+
 	* soap-generator.adb:
 	(Put_Header): Fix indent for routines with paratemeters but no
 	 return value.
