--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,5 +1,8 @@
 2003-10-29  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* soap-wsdl.adb:
+	(To_Type): Remove "use Exceptions", not used.
+
 	* soap-utils.ads, soap-generator.adb:
 	Fix typo in comment.
 
