--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,19 @@
+2003-11-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-message-response-error.ads:
+	Minor comment fixes.
+
+	* soap-generator-stub.adb:
+	(Output_Array): Add recursive call to generate all parameters. Fix
+	 a bug where generation stopped after the first array.
+	(Output_Record): Idem. Fix a bug where generation stopped after
+	 the first record. 
+
+	* soap-generator-skel.adb:
+	(New_Procedure): Prefix record and arrays with the name of the
+	 variable. Fix code generation when more than one array or record
+	 is passed to a routine.
+	
 2003-10-31  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-wsdl.ads, soap-wsdl.adb:
