--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-01  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-server.adb:
+	(Start_Log): Removed, this was an obsolescent feature in 1.4.
+	(Stop_Log): Idem.
+	(Start_Error_Log): Idem.
+	(Stop_Error_Log): Idem.
+
 2003-10-31  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-server.ads:
