--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-03  Pascal Obry  <pascal.obry@edf.fr>
+
+	* demos.gpr:
+	Add support for some missing demos.
+	Clean-up code.
+
 2003-11-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* interoplab_main.adb:
