--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-03  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-containers-key_value.ads:
+	(Free): New routine.
+
+	* aws-smtp-client.ads:
+	Minor comment fix.
+
 2003-11-01  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-server.adb:
