--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-04  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* ada2wsdl-parser.adb:
+	(Start): Remove CU_Kind variable, not used.
+
 2003-11-03  Pascal Obry  <pascal.obry@edf.fr>
 
 	* ada2wsdl-parser.adb:
