--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-07  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-os_lib__gnat.adb:
+	Minor comment fix.
+	Minor reformatting.
+	Update copyright notice.
+
 2003-11-07  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-os_lib__gnat.adb:
