--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-08  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_STD): Add split.
+
+	* split.adb, split.tmplt, split.out:
+	Initial revision.
+
 2003-11-03  Pascal Obry  <pascal.obry@edf.fr>
 
 	* makefile:
