--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-10  Pascal Obry  <pascal.obry@edf.fr>
+
+	* split.thtml:
+	Fix text.
+
 2003-11-08  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
