--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-10  Pascal Obry  <pascal.obry@edf.fr>
+
+	* zlib.adb:
+	Minor reformatting.
+
 2003-11-08  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
