--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,17 @@
+2003-11-10  Pascal Obry  <pascal.obry@edf.fr>
+
+	* makefile:
+	(RT_STD): Add zstrm2.
+
+	* check_mem.adb:
+	(Check_Transient): New procedure.
+
+	* split.adb:
+	Do not add the '/' in URI, this is already in the transient URI.
+
+	* zstrm2.adb, zstrm2.out:
+	Initial revision.
+
 2003-11-08  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
