--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -3,7 +3,7 @@
 	* ada2wsdl-parser.adb:
 	(Start): Remove CU_Kind variable, not used.
 
-2003-11-03  Pascal Obry  <pascal.obry@edf.fr>
+2003-11-03  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* ada2wsdl-parser.adb:
 	(Check_Float): New version based on ASIS entity. Checks for
