--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-12  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* zlib/*:
+	Prerelease 1.2.0.8.
+
 2003-11-10  Pascal Obry  <pascal.obry@edf.fr>
 
 	* zlib.adb:
